FORGE !!! ... well and favourites ;)
Important change:
+ Added Favourites  (dblClick to un-/favourite)
+ Added Forge-Support (BETA!)
(enable while creating your profile --> install to your profile -->
ignore "error"-messages of installer xD --> have fun)
+ Added option to erase every reference of your user

VNumber: 0.0.0.20X

--- a/consoles.lfm
+++ b/consoles.lfm
@@ -4,11 +4,12 @@ object Form_consoles: TForm_consoles
   Top = 106
   Width = 513
   BorderIcons = []
-  BorderStyle = bsDialog
+  BorderStyle = bsSingle
   Caption = 'Form_consoles'
   ClientHeight = 385
   ClientWidth = 513
   Color = clBlack
+  OnShow = FormShow
   Position = poDefault
   LCLVersion = '1.2.6.0'
   object PageControl_Consoles: TPageControl
@@ -30,7 +31,9 @@ object Form_consoles: TForm_consoles
         Height = 360
         Top = 0
         Width = 504
-        Color = clBlack
+        Color = clSilver
+        Font.Color = clBlack
+        ParentFont = False
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
@@ -45,7 +48,9 @@ object Form_consoles: TForm_consoles
         Height = 376
         Top = 0
         Width = 504
-        Color = clBlack
+        Color = clSilver
+        Font.Color = clBlack
+        ParentFont = False
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
